# RayTracing

./: CMakeLists.txt  README.md
images/: 10_5.ppm  10_6.ppm  11_2.ppm  11_3.ppm  11_5.ppm  11_6.ppm  12_1.ppm  12_2.ppm  13_2.ppm  13_7.ppm  9_2.ppm  9_5.ppm  9_6.ppm  9_7.ppm  image.ppm
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
src/: Scene_rays.cpp  after_refactoring.cpp  hit_objects_3.cpp  main.cpp
